fix(doc): #3552 fix button in people page
Former-commit-id: 821d0a8569206ea177fb48982c2d8ec615828b41

--- a/content/pages/people/index.adoc
+++ b/content/pages/people/index.adoc
@@ -44,4 +44,4 @@ we proudly built and called `Fluid Attacks`.
 ++++
 
 [role="tc"]
-[button]#link:../../contact-us/[Join Our Team, role="button-rules"]#
+[button]#link:../../careers/[Join Our Team, role="button-rules"]#
