--- a/new/content/pages/use-cases/continuous-hacking/remediation/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/remediation/index.adoc
@@ -8,9 +8,9 @@
 
 = Remediation
 
-*Fluid Attacks* perform multiple finding validations.
+`Fluid Attacks` performs multiple finding validations.
 You can check at any time if any of the findings have been closed.
 To perform remediation validation:
 First, you must define the treatment used to remediate the vulnerability.
 Then, you must request, through link:../../../products/integrates/[*Integrates*], a finding validation.
-You can always resolve any doubts by contacting *Fluid Attacks* directly.
+You can always resolve any doubts by contacting `Fluid Attacks` directly.
