refac(front): #3549 change cover in products
Former-commit-id: f9ae04263bc689be3fa5c493cb794bf69ac05380

--- a/content/pages/products/rules/index.adoc
+++ b/content/pages/products/rules/index.adoc
@@ -2,6 +2,7 @@
 :category: products
 :description: Rules is a compilation of several security criteria, developed by Fluid Attacks, based on different international standards to ensure the security of systems.
 :keywords: Fluid Attacks, Products, Rules, Criteria, Security, Applications.
+:banner: rules-bg
 
 = Rules
 
