--- a/content/pages/rules/devices/350/index.adoc
+++ b/content/pages/rules/devices/350/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/350/
 :category: devices
 :description: This requirement establishes the importance of enabling memory protection mechanisms.
-:keywords: Memory, Protection, Mechanism, Device, IoT, ASVS, CWe, Rules, Ethical Hacking, Pentesting
+:keywords: Memory, Protection, Mechanism, Device, IoT, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R350. Enable memory protection mechanisms
