feat(doc): #2994.239 reinsert rule 180
- Included an updated, now senseful version of R180
- Added a Description
- Added ASVS, CWE, ePR and GDPR references
- Adjusted R300 for coverage


Former-commit-id: 5760dd0346796036194dae78b1107e812b69f8f9

--- a/content/pages/rules/data/300/index.adoc
+++ b/content/pages/rules/data/300/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 Bussiness sensitive data
-(credit card numbers, *CVV*, etc) must be masked.
+(passwords, credit card numbers, *CVV*, etc) must be masked.
 
 == Description
 
