fix(cross): #3469 remove duplicated page
Former-commit-id: 46a837a304454d3a720a0f9932575211a6841fe5

--- a/content/pages/careers/terms/index.adoc
+++ b/content/pages/careers/terms/index.adoc
@@ -34,7 +34,7 @@ We do this to:
 ** Be objective, precise, and fair in the performance evaluation
 
 * At `Fluid Attacks`, we follow an ethics code
-which you can read by clicking [inner]#link:../../values/[here]#
+which you can read by clicking [inner]#link:../../about-us/values/[here]#
 
 == The Selection Process
 
