feat(doc): #2994.240 add asvs refs to some rules
- Added ASVS reference to R159, R062 and R157
- Fixed some minor typos


Former-commit-id: 31ddeae53b6fbfed72bd9fa9bbe8b5ae382a518b

--- a/content/pages/rules/source/157/index.adoc
+++ b/content/pages/rules/source/157/index.adoc
@@ -24,12 +24,18 @@ The software processes an *XML* document that can contain *XML* entities with
 causing the product to embed incorrect documents into its output.
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.33)]
+Verify that secure compiler flags such as **-fPIE**, **-fstack-protector-all**,
+**-Wl**, **-z,noexecstack**, **-Wl**, **-z,noexecheap** are configured for
+firmware builds.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.5 Deserialization Prevention Requirements.(5.5.2)]
 Verify that the application correctly restricts *XML* parsers to only use the
 most restrictive configuration possible and to ensure that unsafe features such
 as resolving external entities are disabled to prevent *XXE*.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.1 Build.(14.1.2)]
 Verify that compiler flags are configured to enable all available buffer
 overflow protections and warnings,
