refac(doc): #2994.241 merge rules 263 and 237
- These rules were too similar
- Adjusted the corresponding fin references
- Adjusted some SEO descriptions for length compliance


Former-commit-id: aee33dc8c7fab60ad41396d7888ad9d862de7997

--- a/content/pages/findings/security/069/index.adoc
+++ b/content/pages/findings/security/069/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/069/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from using weak CAPTCHA implementations, recommendations to avoid them and related security requirements.
+:description: This finding presents information about vulnerabilities arising from using weak CAPTCHA implementations.
 :keywords: Weak, Captcha, Human, Optical, Automated Tool, Robot
 :findings: yes
 :type: security
