--- a/content/pages/findings/security/003/index.adoc
+++ b/content/pages/findings/security/003/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/003/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about symmetric denial-of-service attacks, recommendations to avoid them and related security requirements.
+:description: This finding presents information about symmetric denial-of-service attacks.
 :keywords: Symmetric, DoS, Denial of Service, Server, Response Time, Resource Consumption
 :findings: yes
 :type: security
@@ -15,6 +15,6 @@ consumes a lot of resources or takes too long to be processed.
 
 . [[r1]] [inner]#link:/web/rules/072/[R072. Set maximum response time]#
 
-. [[r2]] [inner]#link:/web/rules/263/[R263. Establish mechanisms against robot attacks]#
+. [[r2]] [inner]#link:/web/rules/237/[R237. Ascertain human interaction]#
 
 . [[r3]] [inner]#link:/web/rules/327/[R327. Set rate limit]#
