--- a/content/pages/findings/security/047/index.adoc
+++ b/content/pages/findings/security/047/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/047/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities that enable automatic information enumeration attacks, recommendations to avoid them and related security requirements.
+:description: This finding presents information about automatic information enumeration attacks.
 :keywords: Automatic, Information, Enumeration, Data, Robot, Indexing
 :findings: yes
 :type: security
@@ -13,7 +13,7 @@ ports, available services and users' personal data.
 
 == Rules
 
-. [[r1]] [inner]#link:/web/rules/263/[R263. Establish mechanisms against robot attacks]#
+. [[r1]] [inner]#link:/web/rules/237/[R237. Ascertain human interaction]#
 
 . [[r2]] [inner]#link:/web/rules/266/[R266. Disable insecure functionalities]#
 
