--- a/content/pages/findings/security/053/index.adoc
+++ b/content/pages/findings/security/053/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/053/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities enabling brute force attacks, recommendations to avoid them and related security requirements.
+:description: This finding presents information about vulnerabilities enabling brute force attacks.
 :keywords: Brute, Force, Automated, Attack, Protection, Credentials
 :findings: yes
 :type: security
@@ -14,7 +14,5 @@ attacks for guessing credentials.
 == Rules
 
 . [[r1]] [inner]#link:/web/rules/237/[R237. Ascertain human interaction]#
-
-. [[r2]] [inner]#link:/web/rules/263/[R263. Establish mechanisms against robot attacks]#
 
 . [[r3]] [inner]#link:/web/rules/327/[R327. Set rate limit]#
