--- a/content/pages/rules/authentication/237/index.adoc
+++ b/content/pages/rules/authentication/237/index.adoc
@@ -1,26 +1,32 @@
 :slug: rules/237/
 :category: authentication
 :description: This requirement states that the system must guarantee that all user actions are executed by a human and not by robots performing automated tasks.
-:keywords: Authentication Attempt, Human Interaction, User, Limit, CWE, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Robot, Human Interaction, User, Limit, CWE, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R237. Ascertain human interaction
 
 == Requirement
 
-The system must guarantee that the registration,
-authentication, and password recovery actions are performed by a human.
-This can be achieved using *CAPTCHA* or incremental delays.
+The system must guarantee that user actions are performed by a human
+(e.g. registration, authentication and password recovery).
+This can be achieved using *CAPTCHA*, incremental delays or mechanisms that
+prevent excessive crawling and indexing.
 
 == Description
 
-Authentication forms are susceptible to several attacks usually performed by
-robots or automated tools.
+There exist several attacks that have been automated or depend on a robot
+for their execution.
+Many of them focus on exploiting vulnerabilities in authentication forms.
 In order to hinder the effectiveness of these attacks,
 the system must implement mechanisms that help ensure that the entity with
 which it is interacting is a human being.
 
 == Findings
+
+* [inner]#link:/web/findings/003/[F003. Symmetric denial of service]#
+
+* [inner]#link:/web/findings/047/[F047. Automatic information enumeration]#
 
 * [inner]#link:/web/findings/053/[F053. Lack of protection against brute force attacks]#
 
@@ -58,8 +64,8 @@ V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
 Such controls include blocking the most common breached passwords,
-soft lockouts, rate limiting, CAPTCHA, ever increasing delays between attempts,
-IP address restrictions,
+soft lockouts, rate limiting, *CAPTCHA*, ever increasing delays between
+attempts, IP address restrictions,
 or risk-based restrictions such as location, first login on a device,
 recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
@@ -76,3 +82,13 @@ V11.1 Business Logic Security Requirements.(11.1.2)]
 Verify the application will only process business logic flows with all steps
 being processed in realistic human time,
 i.e. transactions are not submitted too quickly.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V11.1 Business Logic Security Requirements.(11.1.8)]
+Verify the application has configurable alerting when automated attacks or
+unusual activity is detected.
+
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.2 RESTful Web Service Verification Requirements.(13.2.4)]
+Verify that *REST* services have anti-automation controls to protect against
+excessive calls, especially if the API is unauthenticated.
